--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,12 +24,14 @@
         width: 50%;
     }
 
-    .my-failures-content h4 {
+    .my-failures-content h4,
+    .my-plans h4,
+    .mindset-container h4  {
         font-size: 28px;
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
 
     .hero .hero-content h1 {
         font-size: 32px;
@@ -42,12 +44,21 @@
         text-align: center;
     }
 
+    .my-failures-image {
+        width: auto;
+    }
+
+    .my-failures-content {
+        width: auto;
+    }
+
     .my-failures-image img {
         width: 100%;
         max-width: 300px;
     }
 
-    .my-failures-content h4 {
+    .my-failures-content h4,
+    .my-plans h4 {
         font-size: 30px;
     }
 
