--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,8 +26,15 @@
 
     .my-failures-content h4,
     .my-plans h4,
-    .mindset-container h4  {
+    .mindset-container h4 {
         font-size: 28px;
+    }
+
+    .footer-container {
+        flex-direction: column;
+    }
+    .footer-container .subscribe {
+        margin-right: 170px;
     }
 }
 
@@ -65,5 +72,8 @@
     .my-failures-content ul li {
         font-size: 16px;
         text-align: left;
+    }
+    .footer-container .subscribe {
+        margin-right: 30px;
     }
 }
